--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -54,7 +54,7 @@
         <div class="modal-card">
             <header class="modal-card-head has-background-danger">
                 <p class="modal-card-title has-text-black">Wollen Sie das Netzwerk abmelden?</p>
-                <button class="delete" aria-label="close" data-close="#modal-login"></button>
+                <button class="delete" aria-label="close" data-close="#modal-logout"></button>
             </header>
             <section class="modal-card-body">
                 <div class="content">
@@ -69,7 +69,7 @@
             </section>
 
             <footer class="modal-card-foot">
-                <button class="button is-danger" data-close="#modal-login">Schließen</button>
+                <button class="button is-danger" data-close="#modal-logout">Schließen</button>
             </footer>
         </div>
     </div>
