--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,6 +45,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="column">
+                        <div class="box" style="max-width: 500px; margin: auto;">
+                            <div class="heading">Socketstatus: </div>
+                            <div class="title">Status des Sockets </div>
+                            <div class="level">
+                                <div class="level-item">
+                                    <div class="notification is-primary"><p>Aktiv</p>   </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="column">
                         <div class="box" style="max-width: 500px; margin: auto;">
