--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,13 +36,20 @@
                             </div>
                         </div>
 
-                        <div class="field is-grouped is-grouped-right">
+
+                        <div class="field is-grouped is-grouped-space-between" style="align-items: center;">
                             <p class="control">
-                                <button class="button is-link" type="submit">Auswählen</button>
+                                <a class="is-link has-text-black" href="/register">Netzwerk registrieren?</a>
                             </p>
-                            <p class="control">
-                                <a class="button is-danger" href="#">Abbrechen</a>
-                            </p>
+
+                            <div class="field is-grouped is-grouped-right" style="margin-left: auto;">
+                                <p class="control">
+                                    <button class="button is-link" type="submit">Auswählen</button>
+                                </p>
+                                <p class="control">
+                                    <a class="button is-danger" href="#">Abbrechen</a>
+                                </p>
+                            </div>
                         </div>
                     </form>
                 </div>
