Mediaplayer auf cool

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -20,12 +20,12 @@
      <p class="title">Errorseite!</p>
      <p class="subtitle">Irgendwas ist schief gelaufen!</p>
 
+     <span th:text="${error}"></span>
+
 
   </main>
 </div>
 
-<!--<div th:if="${session.network !=null}">-->
-<!--    <div th:text="${session.network._id}">h</div>-->
-<!--</div>-->
+
 </body>
 </html>
