--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -42,7 +42,7 @@
                             <button class="button is-link" type="submit">Auswählen</button>
                         </p>
                         <p class="control">
-                            <a class="button is-danger" href="#">Abbrechen</a>
+                            <a class="button is-danger" href="/">Abbrechen</a>
                         </p>
                     </div>
 
