--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Header</title>
+    <link rel="icon" type="image/png" href="https://img.icons8.com/color/48/raspberry-pi.png">
+
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="/main.js"></script>
@@ -14,7 +16,7 @@
     <nav class="navbar is-primary py-3" role="navigation" aria-label="main navigation">
 
         <div class="navbar-start">
-            <!-- SVG eingefügt ganz links -->
+
             <div class="navbar-brand">
                 <a class="navbar-item" href="/">
 
