--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
+    <link rel="icon" type="image/png" href="https://img.icons8.com/color/48/raspberry-pi.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
@@ -14,9 +15,13 @@
 <div th:insert="~{fragments/header.html ::header }"></div>
 
 
+
     <main>
         <section class="section">
             <div class="container">
+                <div th:if="${session.message}" class="notification is-success mt-3 mb-3" style="max-width: 500px; margin: auto;">
+                    <span th:text="${session.message}"></span>
+                </div>
                 <div class="box" style="max-width: 500px; margin: auto;">
                     <h1 class="title has-text-centered has-text-black">Netzwerkauswahl</h1>
 
